--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
       <artifactId>curator-recipes</artifactId>
       <version>2.9.1</version>
     </dependency>
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.9.3</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
